--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -4,8 +4,8 @@
     "store_description": "Discover your next great read with our premium ebook collection.",
     "background_color": "#F8F9FA",
     "text_color": "#212529",
-    "primary_color": "#28A745",
-    "secondary_color": "#218838",
+    "primary_color": "#B2D3C2",
+    "secondary_color": "#A8C4B8",
     "heading_font": "serif",
     "body_font": "sans-serif",
     "grid_columns": "4",
