--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -4,8 +4,8 @@
     "store_description": "Discover your next great read with our premium ebook collection.",
     "background_color": "#F8F9FA",
     "text_color": "#212529",
-    "primary_color": "#10B981",
-    "secondary_color": "#059669",
+    "primary_color": "#065F46",
+    "secondary_color": "#047857",
     "heading_font": "serif",
     "body_font": "sans-serif",
     "grid_columns": "4",
